# framework

./: .gitignore  .replit  Dockerfile  README.md  pyproject.toml  replit.md  requirements.txt
public/: app.py  main.py  simple_app.py
src/framework/manager/: defender.py  executor.py  messenger.py  presenter.py  storekeeper.py
src/framework/port/: presentation.py  presentation.test.py  presentation.xml
src/framework/schema/: model.json  user.py
src/framework/service/: contract.py  contract.test.py  factory.py  factory.test.py  flow.py  flow.test.py  language.py  language.test.py  loader.py  loader.test.py  run.py  run.test.py  test.py
src/infrastructure/actuator/: ansible.py  flow.py
src/infrastructure/authentication/: supabase.py
src/infrastructure/message/: console.py  redis.py
src/infrastructure/persistence/: redis.py
src/infrastructure/presentation/: flutter.py  starlette.py
